Fix image paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 
   <div class="card">
     <h1>Happy Teddy Day 🧸💖</h1>
-    <img src="./assects/WhatsApp Image 2026-02-10 at 12.04.23 PM.jpeg" alt="Cute Teddy" onclick="openTeddy()">
+    <img src="happy/assects/WhatsApp Image 2026-02-10 at 12.04.23 PM.jpeg" alt="Cute Teddy" onclick="openTeddy()">
     <p>Thanks for coming into my life, my wifeee 🥰💞</p>
   </div>
 
   <!-- Big Teddy View -->
   <div class="overlay" id="overlay" onclick="closeTeddy()">
-    <img src="./assects/WhatsApp Image 2026-02-10 at 12.04.23 PM.jpeg" alt="Big Teddy">
+    <img src="happy/assects/WhatsApp Image 2026-02-10 at 12.04.23 PM.jpeg" alt="Big Teddy">
   </div>
 
   <script>
