--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   <!-- Big Teddy View -->
   <div class="overlay" id="overlay" onclick="closeTeddy()">
-    <img src="happy/assects/WhatsApp Image 2026-02-10 at 12.04.23 PM.jpeg" alt="Big Teddy">
+    <img src="./happy/assects/WhatsApp Image 2026-02-10 at 1.02.06 PM.jpeg" alt="Big Teddy">
   </div>
 
   <script>
